lecture 2022-03-21 - change script in gh-actions

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -14,5 +14,6 @@ jobs:
       - name: install stuff
         run: |
           sudo apt install -y tree
-          sudo ls -lah
+          sudo pwd
           sudo tree -d
+          sudo ls / -lah
