--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -13,7 +13,6 @@ jobs:
         uses: actions/checkout@v2
       - name: install stuff
         run: |
-          sudo apt install -y tree
-          sudo pwd
-          sudo tree -d
-          sudo ls / -lah
+          #sudo apt update
+          #sudo apt install -y asciidoctor graphviz
+          #sudo gem install asciidoctor-diagram
